--- a/.gitignore
+++ b/.gitignore
@@ -1,1 +1,21 @@
-/node_modules
+# Node modules
+node_modules/
+
+# Logs
+npm-debug.log*
+yarn-debug.log*
+yarn-error.log*
+
+# Environment variables
+.env
+
+# Build output
+dist/
+build/
+
+# Miscellaneous
+.DS_Store
+.vscode/
+.idea/
+coverage/
+*.tgz
